SCSS Basic Layout

--- a/react-front-end/src/components/styles/App.css
+++ b/react-front-end/src/components/styles/App.css
@@ -1,1 +1,20 @@
-/* No CSS *//*# sourceMappingURL=App.css.map */
+container {
+  background-color: #263852;
+  width: 100%;
+}
+
+.navigation-bar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  background-color: #263852;
+  width: 100%;
+  padding: 0;
+}
+/*# sourceMappingURL=App.css.map */
