--- a/react-front-end/src/components/styles/Loader.scss
+++ b/react-front-end/src/components/styles/Loader.scss
@@ -1,10 +1,9 @@
 @import "./variables";
 @import "./functions";
 
-div {
+.loader-flex {
   @include flex(center, center);
   width: 100%;
-  background-color: $listBackground;
 }
 
 .loader {
