--- a/react-front-end/src/components/styles/App.scss
+++ b/react-front-end/src/components/styles/App.scss
@@ -1,1 +1,15 @@
 @import "./variables";
+
+container {
+  background-color: $navBackground;
+  width: 100%;
+}
+
+.navigation-bar {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  background-color: $navBackground;
+  width: 100%;
+  padding: 0;
+}
