--- a/react-front-end/src/components/styles/Lyrics.css
+++ b/react-front-end/src/components/styles/Lyrics.css
@@ -8,7 +8,7 @@ pre {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-color: black;
+  background-color: #263852;
   color: white;
 }
 /*# sourceMappingURL=Lyrics.css.map */
