Basic SCSS layout finished

--- a/react-front-end/src/components/styles/Artists.css
+++ b/react-front-end/src/components/styles/Artists.css
@@ -1,4 +1,52 @@
+.form-align {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.artists-body {
+  background-image: url("../images/sonus-paper.jpeg");
+}
+
+.album-dropdown {
+  background-color: #676782;
+  border-width: 1em;
+}
+
+.lyric-border {
+  border: 0.2rem outset black;
+  border-radius: 2px;
+}
+
+form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 2em;
+  color: #263852;
+}
+
 label {
-  color: white;
+  color: black;
 }
 /*# sourceMappingURL=Artists.css.map */
