--- a/react-front-end/src/components/styles/App.scss
+++ b/react-front-end/src/components/styles/App.scss
@@ -1,15 +1,15 @@
 @import "./variables";
+@import "./functions";
 
-container {
-  background-color: $navBackground;
-  width: 100%;
+.nav-align {
+  @include flex(center, center);
+  flex-direction: row;
 }
 
 .navigation-bar {
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
+  @include flex(center, center);
+  flex-direction: row;
   background-color: $navBackground;
   width: 100%;
-  padding: 0;
+  background-image: url("../images/sonus-paper-4.jpeg");
 }
