--- a/react-front-end/src/components/styles/Artists.scss
+++ b/react-front-end/src/components/styles/Artists.scss
@@ -1,25 +1,34 @@
 @import "./variables";
 @import "./functions";
 
-// form {
-//   display: flex;
-//   flex-direction: column;
-//   justify-content: flex-start;
-//   align-items: flex-start;
-//   padding: 2em;
-//   color: white;
-// }
+.form-align {
+  @include flex(center, center);
+  flex-direction: column;
+}
 
-// container {
-//   display: flex;
-//   flex-direction: column;
-//   justify-content: flex-start;
-//   align-items: flex-start;
-//   padding: 2em;
-//   color: white;
-//   width: max;
-// }
+.artists-body {
+  background-image: url("../images/sonus-paper.jpeg");
+}
+
+.album-dropdown {
+  background-color: rgb(103, 103, 130);
+  border-width: 1em;
+}
+
+.lyric-border {
+  border: 0.2rem outset black;
+  border-radius: 2px;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 2em;
+  color: $navBackground;
+}
 
 label {
-  color: white;
+  color: black;
 }
