--- a/react-front-end/src/components/styles/Lyrics.scss
+++ b/react-front-end/src/components/styles/Lyrics.scss
@@ -1,8 +1,30 @@
 @import "./variables";
 @import "./functions";
 
+.search-field {
+  padding: 1em;
+}
+
+.lyrics-body {
+  @include flex(center, center);
+  flex-direction: column;
+  background-image: url("../images/sonus-stone.jpeg");
+}
+
+.lyric-border {
+  border: 0.1rem outset white;
+  box-shadow: 0 0 0 2rem grey;
+  border-radius: 2px;
+}
+
+.lyrics-header {
+  @include flex(center, center);
+  color: black;
+}
+
 pre {
   @include flex(center, center);
-  background-color: $navBackground;
-  color: white;
+  width: 100%;
+  background-image: url("../images/sonus-paper.jpeg");
+  color: black;
 }
