--- a/react-front-end/src/components/styles/Loader.css
+++ b/react-front-end/src/components/styles/Loader.css
@@ -27,11 +27,11 @@
           align-items: center;
   border: 16px solid #f3f3f3;
   /* Light grey */
-  border-top: 16px solid #3498db;
+  border-top: 16px solid black;
   /* Blue */
   border-radius: 50%;
-  width: 350px;
-  height: 350px;
+  width: 250px;
+  height: 250px;
   -webkit-animation: spin 2s linear infinite;
           animation: spin 2s linear infinite;
 }
