--- a/react-front-end/src/components/styles/Loader.scss
+++ b/react-front-end/src/components/styles/Loader.scss
@@ -12,10 +12,10 @@
   justify-content: center;
   align-items: center;
   border: 16px solid #f3f3f3; /* Light grey */
-  border-top: 16px solid #3498db; /* Blue */
+  border-top: 16px solid black; /* Blue */
   border-radius: 50%;
-  width: 350px;
-  height: 350px;
+  width: 250px;
+  height: 250px;
   animation: spin 2s linear infinite;
 }
 
