--- a/react-front-end/src/components/styles/Lyrics.scss
+++ b/react-front-end/src/components/styles/Lyrics.scss
@@ -22,6 +22,11 @@
   color: black;
 }
 
+.track {
+  @include flex(center, center);
+  background-image: url("../images/sonus-paper.jpeg");
+}
+
 pre {
   @include flex(center, center);
   width: 100%;
