--- a/react-front-end/src/components/styles/Loader.css
+++ b/react-front-end/src/components/styles/Loader.css
@@ -28,7 +28,7 @@
   border: 16px solid #f3f3f3;
   /* Light grey */
   border-top: 16px solid black;
-  /* Blue */
+  /* Black */
   border-radius: 50%;
   width: 250px;
   height: 250px;
