--- a/react-front-end/src/components/styles/Loader.scss
+++ b/react-front-end/src/components/styles/Loader.scss
@@ -12,7 +12,7 @@
   justify-content: center;
   align-items: center;
   border: 16px solid #f3f3f3; /* Light grey */
-  border-top: 16px solid black; /* Blue */
+  border-top: 16px solid black; /* Black */
   border-radius: 50%;
   width: 250px;
   height: 250px;
