--- a/react-front-end/src/components/styles/Lyrics.scss
+++ b/react-front-end/src/components/styles/Lyrics.scss
@@ -11,25 +11,27 @@
   background-image: url("../images/sonus-stone.jpeg");
 }
 
-.lyric-border {
-  border: 0.1rem outset white;
-  box-shadow: 0 0 0 2rem grey;
-  border-radius: 2px;
-}
-
-.lyrics-header {
-  @include flex(center, center);
-  color: black;
-}
-
 .track {
   @include flex(center, center);
   background-image: url("../images/sonus-paper.jpeg");
+  border: 1px solid #ccc;
+  border-radius: 25px;
+  padding: 15px;
+  margin-top: 20px;
 }
 
 pre {
   @include flex(center, center);
   width: 100%;
+  font-family: "fantasy", "papyrus";
+  font-size: 20px;
+  font-weight: 600;
   background-image: url("../images/sonus-paper.jpeg");
   color: black;
+
+  border: 1px solid #ccc;
+  border-radius: 25px;
+  padding: 15px;
+  padding-bottom: 80px;
+  margin-top: 20px;
 }
