--- a/react-front-end/src/components/styles/App.css
+++ b/react-front-end/src/components/styles/App.css
@@ -1,3 +1,7 @@
+.app-body {
+  height: 100%;
+}
+
 .nav-align {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -29,6 +33,7 @@
       -ms-flex-direction: row;
           flex-direction: row;
   width: 100%;
+  height: 100%;
   background-image: url("../images/sonus-paper-4.jpeg");
 }
 /*# sourceMappingURL=App.css.map */
