--- a/react-front-end/src/components/styles/App.scss
+++ b/react-front-end/src/components/styles/App.scss
@@ -1,6 +1,10 @@
 @import "./variables";
 @import "./functions";
 
+.app-body {
+  height: 100%;
+}
+
 .nav-align {
   @include flex(center, center);
   flex-direction: row;
@@ -10,5 +14,6 @@
   @include flex(center, center);
   flex-direction: row;
   width: 100%;
+  height: 100%;
   background-image: url("../images/sonus-paper-4.jpeg");
 }
