--- a/react-front-end/src/components/styles/Lyrics.scss
+++ b/react-front-end/src/components/styles/Lyrics.scss
@@ -28,7 +28,7 @@ pre {
   font-weight: 600;
   background-image: url("../images/sonus-paper.jpeg");
   color: black;
-
+  overflow: auto;
   border: 1px solid #ccc;
   border-radius: 25px;
   padding: 15px;
