--- a/react-front-end/src/components/styles/Artists.scss
+++ b/react-front-end/src/components/styles/Artists.scss
@@ -5,10 +5,13 @@
   @include flex(center, center);
   flex-direction: row;
   position: fixed;
-  top: 50px;
   width: 100%;
   z-index: 100;
-  background-image: url("../images/sonus-paper.jpeg");
+  background-color: white;
+  // overflow: auto;
+  // border: 10px solid black;
+  //border-radius: 30px;
+  //background-image: url("../images/sonus-stone-3.jpeg");
 }
 
 .cassette {
@@ -21,11 +24,6 @@
 .form-layout {
   @include flex(center, center);
   flex-direction: row;
-}
-
-.artists-body {
-  background-image: url("../images/sonus-paper.jpeg");
-  height: 100%;
 }
 
 .artist-element {
@@ -43,6 +41,11 @@
   margin-left: 2px;
 }
 
+.track-text {
+  font-family: "fantasy", "papyrus";
+  font-size: 20px;
+  font-weight: 800;
+}
 .album-track-dropdowns {
   @include flex(space-evenly, center);
   flex-direction: row;
@@ -53,6 +56,11 @@
   border-radius: 2px;
   height: 100%;
   width: 100%;
+}
+
+.album-track-title {
+  display: flex;
+  flex-direction: column;
 }
 
 form {
