--- a/react-front-end/src/components/styles/App.css
+++ b/react-front-end/src/components/styles/App.css
@@ -1,39 +1,74 @@
-.app-body {
+body {
   height: 100%;
+  width: 100%;
+  color: white;
+  background-color: #1e2e43;
+}
+
+.home-icon {
+  width: 46px;
+  height: 46px;
+  border-radius: 50%;
+  overflow: hidden;
+  margin-top: -6px;
+  content: url("../images/sonus-artem.png");
+  height: 3em;
+}
+
+.sonus-font {
+  font-family: "fantasy", "chalkduster";
+  font-size: 50px;
+  font-weight: 200;
 }
 
 .nav-align {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  padding: 2em;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  color: white;
+  width: 100%;
+  background-color: #1e2e43;
 }
 
-.navigation-bar {
+.nav-main {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  width: 100%;
-  height: 100%;
-  background-image: url("../images/sonus-paper-4.jpeg");
+}
+
+.nav-login-register {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.nav-link {
+  font-weight: 600;
+  font-style: italic;
+  font-size: 18px;
+  color: white;
 }
 /*# sourceMappingURL=App.css.map */
