--- a/react-front-end/src/components/styles/Loader.css
+++ b/react-front-end/src/components/styles/Loader.css
@@ -25,13 +25,11 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  border: 16px solid #f3f3f3;
-  /* Light grey */
-  border-top: 16px solid black;
-  /* Black */
+  background: url("../images/horns.png");
+  border-color: #1e2e43;
   border-radius: 50%;
-  width: 250px;
-  height: 250px;
+  width: 550px;
+  height: 550px;
   -webkit-animation: spin 2s linear infinite;
           animation: spin 2s linear infinite;
 }
