--- a/react-front-end/src/components/styles/Loader.scss
+++ b/react-front-end/src/components/styles/Loader.scss
@@ -11,11 +11,14 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  border: 16px solid #f3f3f3; /* Light grey */
-  border-top: 16px solid black; /* Black */
+  background: url('../images/horns.png');
+  border-color: $navBackground;
+  //background-color: white;
+  //border: 2px solid #f3f3f3; /* Light grey */
+  // border-top: 16px solid black; /* Black */
   border-radius: 50%;
-  width: 250px;
-  height: 250px;
+  width: 550px;
+  height: 550px;
   animation: spin 2s linear infinite;
 }
 
