--- a/react-front-end/src/components/styles/Lyrics.scss
+++ b/react-front-end/src/components/styles/Lyrics.scss
@@ -6,13 +6,17 @@
   flex-direction: row;
 }
 
+.page-color {
+  background-color: $navBackground;
+}
+
 .search-field {
   padding: 1em;
 }
 
 .album-image {
-  border: 5px solid black;
-  box-shadow: 15px 10px 10px grey;
+  border: 1px solid black;
+  box-shadow: 6px 4px 4px grey;
   border-radius: 25px;
 }
 
@@ -20,7 +24,7 @@
   @include flex(center, center);
   flex-direction: column;
   //background-image: url("../images/sonus-stone.jpeg");
-  background-color: white;
+  background-color: $navBackground;
   margin-top: 0;
   height: 100%;
   width: 100%;
@@ -30,7 +34,7 @@
   @include flex(center, center);
   background-image: url("../images/sonus-stone-5.jpeg");
   border: 1px solid #ccc;
-  border-radius: 50px;
+  border-radius: 10px;
   padding: 15px;
   margin-top: 40px;
 }
@@ -42,10 +46,9 @@ pre {
   font-size: 15px;
   font-weight: 600;
   background-image: url("../images/sonus-stone-5.jpeg");
-  box-shadow: 15px 10px 10px grey;
+  box-shadow: 6px 4px 4px grey;
   color: black;
   overflow: auto;
-  border: 5px solid black;
   border-radius: 25px;
   padding: 15px;
   padding-bottom: 80px;
